Pagination with scrivener

--- a/lib/ptr_web/templates/user/index.html.eex
+++ b/lib/ptr_web/templates/user/index.html.eex
@@ -26,6 +26,8 @@
         <% end %>
       </tbody>
     </table>
+
+    <%= pagination_links @conn, @page, view_style: :bulma %>
   </div>
 </section>
 
