Inputs helper added

--- a/lib/ptr_web/templates/user/_form.html.eex
+++ b/lib/ptr_web/templates/user/_form.html.eex
@@ -5,37 +5,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= label f, :name, gettext("Name"), class: "label" %>
-    <div class="control">
-      <%= text_input f, :name, class: "input", autofocus: true %>
-    </div>
-    <%= error_tag f, :name %>
-  </div>
-
-  <div class="field">
-    <%= label f, :lastname, gettext("Lastname"), class: "label" %>
-    <div class="control">
-      <%= text_input f, :lastname, class: "input" %>
-    </div>
-    <%= error_tag f, :lastname %>
-  </div>
-
-  <div class="field">
-    <%= label f, :email, gettext("Email"), class: "label" %>
-    <div class="control">
-      <%= text_input f, :email, class: "input" %>
-    </div>
-    <%= error_tag f, :email %>
-  </div>
-
-  <div class="field">
-    <%= label f, :password, gettext("Password"), class: "label" %>
-    <div class="control">
-      <%= password_input f, :password, class: "input" %>
-    </div>
-    <%= error_tag f, :password %>
-  </div>
+  <%= input f, :name,     gettext("Name"), autofocus: true %>
+  <%= input f, :lastname, gettext("Lastname") %>
+  <%= input f, :email,    gettext("Email") %>
+  <%= input f, :password, gettext("Password") %>
 
   <div class="field">
     <p class="control">
