--- a/lib/ptr_web/templates/session/new.html.eex
+++ b/lib/ptr_web/templates/session/new.html.eex
@@ -9,27 +9,15 @@
 
           <div class="message-body">
             <%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
-              <div class="field">
-                <%= label f, :email, gettext("Email"), class: "label is-sr" %>
-                <div class="control has-icons-left">
-                  <%= text_input f, :email, class: "input is-medium", autofocus: true, placeholder: gettext("Email") %>
-                  <span class="icon is-left">
-                    <i class="fa fa-envelope"></i>
-                  </span>
-                </div>
-                <%= error_tag f, :email %>
-              </div>
+              <%= input f, :email, gettext("Email"),
+                input_html: [autofocus: true, class: "input is-medium", placeholder: gettext("Email")],
+                icons:      [left: "envelope"],
+                label_html: [class: "label is-sr"] %>
 
-              <div class="field">
-                <%= label f, :password, gettext("Password"), class: "label is-sr" %>
-                <div class="control has-icons-left">
-                  <%= password_input f, :password, class: "input is-medium", placeholder: gettext("Password") %>
-                  <span class="icon is-left">
-                    <i class="fa fa-lock"></i>
-                  </span>
-                </div>
-                <%= error_tag f, :password %>
-              </div>
+              <%= input f, :password, gettext("Password"),
+                input_html: [class: "input is-medium", placeholder: gettext("Password")],
+                icons:      [left: "lock"],
+                label_html: [class: "label is-sr"] %>
 
               <div class="field">
                 <p class="control has-text-right">
