--- a/lib/ptr_web/templates/user/_form.html.eex
+++ b/lib/ptr_web/templates/user/_form.html.eex
@@ -1,18 +1,18 @@
 <%= form_for @changeset, @action, fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="notification is-danger">
-      <p><%= gettext("Oops, something went wrong! Please check the errors below.") %></p>
-    </div>
-  <% end %>
+  <div class="card-content">
+    <%= if @changeset.action do %>
+      <div class="notification is-danger">
+        <p><%= gettext("Oops, something went wrong! Please check the errors below.") %></p>
+      </div>
+    <% end %>
 
-  <%= input f, :name,     gettext("Name"), input_html: [autofocus: true] %>
-  <%= input f, :lastname, gettext("Lastname") %>
-  <%= input f, :email,    gettext("Email") %>
-  <%= input f, :password, gettext("Password") %>
-
-  <div class="field">
-    <p class="control">
-      <%= submit gettext("Submit"), class: "button is-primary" %>
-    </p>
+    <%= input f, :name,     gettext("Name"), input_html: [autofocus: true] %>
+    <%= input f, :lastname, gettext("Lastname") %>
+    <%= input f, :email,    gettext("Email") %>
+    <%= input f, :password, gettext("Password") %>
   </div>
+
+  <footer class="card-footer">
+    <%= submit gettext("Submit"), class: "button is-medium is-white is-paddingless card-footer-item" %>
+  </footer>
 <% end %>
