--- a/lib/ptr_web/templates/user/edit.html.eex
+++ b/lib/ptr_web/templates/user/edit.html.eex
@@ -1,6 +1,14 @@
 <section class="section is-primary">
   <div class="container">
-    <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
+    <div class="card">
+      <header class="card-header">
+        <p class="card-header-title">
+          <%= gettext("Edit user") %>
+        </p>
+      </header>
+
+      <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
+    </div>
   </div>
 </section>
 
