--- a/lib/ptr_web/templates/user/_form.html.eex
+++ b/lib/ptr_web/templates/user/_form.html.eex
@@ -2,17 +2,17 @@
   <div class="card-content">
     <%= if @changeset.action do %>
       <div class="notification is-danger">
-        <p><%= gettext("Oops, something went wrong! Please check the errors below.") %></p>
+        <p><%= dgettext("users", "Oops, something went wrong! Please check the errors below.") %></p>
       </div>
     <% end %>
 
-    <%= input f, :name,     gettext("Name"), input_html: [autofocus: true] %>
-    <%= input f, :lastname, gettext("Lastname") %>
-    <%= input f, :email,    gettext("Email") %>
-    <%= input f, :password, gettext("Password") %>
+    <%= input f, :name,     dgettext("users", "Name"), input_html: [autofocus: true] %>
+    <%= input f, :lastname, dgettext("users", "Lastname") %>
+    <%= input f, :email,    dgettext("users", "Email") %>
+    <%= input f, :password, dgettext("users", "Password") %>
   </div>
 
   <footer class="card-footer">
-    <%= submit gettext("Submit"), class: "button is-medium is-white is-paddingless card-footer-item" %>
+    <%= submit dgettext("users", "Submit"), class: "button is-medium is-white is-paddingless card-footer-item" %>
   </footer>
 <% end %>
