--- a/lib/ptr_web/templates/layout/_menu.html.eex
+++ b/lib/ptr_web/templates/layout/_menu.html.eex
@@ -30,7 +30,7 @@
 
           <div id="user-dropdown" class="navbar-dropdown">
             <%= link to: session_path(@conn, :delete), method: :delete, class: "navbar-item" do %>
-              <%= gettext("Logout") %>
+              <%= dgettext("sessions", "Logout") %>
               <span class="icon">
                 <i class="fa fa-sign-out" aria-hidden="true"></i>
               </span>
