Add lock_version to account and users

--- a/lib/ptr_web/templates/user/_form.html.eex
+++ b/lib/ptr_web/templates/user/_form.html.eex
@@ -10,6 +10,10 @@
     <%= input f, :lastname, dgettext("users", "Lastname") %>
     <%= input f, :email,    dgettext("users", "Email") %>
     <%= input f, :password, dgettext("users", "Password") %>
+
+    <%= if assigns[:user] do %>
+      <%= hidden_input f, :lock_version, [value: @user.lock_version] %>
+    <% end %>
   </div>
 
   <footer class="card-footer">
