Password reset controller and views

--- a/lib/ptr_web/templates/email/password_reset.html.eex
+++ b/lib/ptr_web/templates/email/password_reset.html.eex
@@ -1,1 +1,10 @@
-<h1><%= @user.email %></h1>
+<h2><%= dgettext("emails", "Hello %{name},", name: @user.name) %></h2>
+
+<p><%= dgettext("emails", "Someone requested a password reset for your user account") %></p>
+<p><%= dgettext("emails", "Follow this link to reset your password") %>:</p>
+
+<p>
+  <%= link dgettext("emails", "Reset password"), to: password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
+</p>
+
+<p><%= dgettext("emails", "If you didn't ask for this you can safely disregard this message") %></p>
