--- a/lib/ptr_web/templates/email/password_reset.text.eex
+++ b/lib/ptr_web/templates/email/password_reset.text.eex
@@ -1,1 +1,10 @@
-<%= @user.email %>
+<%= dgettext("emails", "Hello %{name},", name: @user.name) %>
+
+<%= dgettext("emails", "Someone requested a password reset for your user account") %>
+<%= dgettext("emails", "Go to this address to reset your password") %>:
+
+<%= password_url(PtrWeb.Endpoint, :edit, @user.password_reset_token) %>
+
+
+--------------------------------------------------------------------------------
+<%= dgettext("emails", "If you didn't ask for this you can safely disregard this message") %>
