--- a/lib/ptr_web/templates/user/edit.html.eex
+++ b/lib/ptr_web/templates/user/edit.html.eex
@@ -1,13 +1,17 @@
 <section class="section is-primary">
   <div class="container">
-    <div class="card">
-      <header class="card-header">
-        <p class="card-header-title">
-          <%= dgettext("users", "Edit user") %>
-        </p>
-      </header>
+    <div class="columns">
+      <div class="column is-half is-offset-one-quarter">
+        <div class="card">
+          <header class="card-header">
+            <p class="card-header-title">
+              <%= dgettext("users", "Edit user") %>
+            </p>
+          </header>
 
-      <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
+          <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
+        </div>
+      </div>
     </div>
   </div>
 </section>
