--- a/lib/ptr_web/templates/layout/_menu.html.eex
+++ b/lib/ptr_web/templates/layout/_menu.html.eex
@@ -1,7 +1,7 @@
-<div class="container">
-  <nav class="navbar">
+<nav class="navbar has-shadow is-light">
+  <div class="container">
     <div class="navbar-brand">
-      <%= link to: root_path(@conn, :index), class: "navbar-item" do %>
+      <%= link to: root_path(@conn, :index), class: "navbar-item is-hoverable" do %>
         <span class="icon">
           <i class="fa fa-home" aria-hidden="true"></i>
         </span>
@@ -31,7 +31,7 @@
             </span>
           </div>
 
-          <div id="user-dropdown" class="navbar-dropdown">
+          <div id="user-dropdown" class="navbar-dropdown is-right">
             <%= link to: session_path(@conn, :delete), method: :delete, class: "navbar-item" do %>
               <%= dgettext("sessions", "Logout") %>
               <span class="icon">
@@ -42,7 +42,5 @@
         </div>
       </div>
     </div>
-  </nav>
-</div>
-
-<hr class="is-marginless">
+  </div>
+</nav>
