Add asset preload on app layout

--- a/lib/ptr_web/templates/layout/app.html.eex
+++ b/lib/ptr_web/templates/layout/app.html.eex
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title><%= gettext "Ptr App" %></title>
+
+    <link rel="preload" href="<%= static_path(@conn, "/css/app.css") %>" as="style">
+    <link rel="preload" href="<%= static_path(@conn, "/js/app.js") %>" as="script">
+
     <link rel="icon" type="image/x-icon" href="<%= static_path(@conn, "/images/favicon.ico") %>">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
