--- a/priv/templates/ptr.gen.html/show.html.eex
+++ b/priv/templates/ptr.gen.html/show.html.eex
@@ -9,17 +9,17 @@
 
       <div class="card-content">
         <ul>
-        <%= for {k, _} <- schema.attrs do %>
+<%= for {k, _} <- schema.attrs do %>
           <li>
-            <strong><%%= dgettext("<%= schema.plural")>", "<%= Phoenix.Naming.humanize(Atom.to_string(k)) %>") %>:</strong>
+            <strong><%%= dgettext("<%= schema.plural %>", "<%= Phoenix.Naming.humanize(Atom.to_string(k)) %>") %>:</strong>
             <%%= @<%= schema.singular %>.<%= k %> %>
           </li>
-        <% end %>
+<% end %>
         </ul>
       </div>
 
       <footer class="card-footer">
-        <%%= link dgettext("<%= schema.plural %>", "Edit"), to: <%= schema.route_helper %>_path(@conn, :edit, @<%= schema.singular %>, class: "card=footer-item") %>
+        <%%= link dgettext("<%= schema.plural %>", "Edit"), to: <%= schema.route_helper %>_path(@conn, :edit, @<%= schema.singular %>), class: "card-footer-item" %>
       </footer>
     </div>
   </div>
