--- a/priv/templates/ptr.gen.html/_form.html.eex
+++ b/priv/templates/ptr.gen.html/_form.html.eex
@@ -1,18 +1,17 @@
 <%%= form_for @changeset, @action, fn f -> %>
   <div class="card-content">
-  <%%= if @changeset.action do %>
-    <div class="notification is-danger">
-      <p><%%= dgettext("<%= schema.plural %>", "Oops, something went wrong! Please check the errors below.") %></p>
-    </div>
-  <%% end %>
-<%= for attr <- schema.attrs do %>
+    <%%= if @changeset.action do %>
+      <div class="notification is-danger">
+        <p><%%= dgettext("<%= schema.plural %>", "Oops, something went wrong! Please check the errors below.") %></p>
+      </div>
+    <%% end %>
+<%= for {attr, _type} <- schema.attrs do %>
     <%%= input f, <%= inspect attr %>, dgettext("<%= schema.plural %>", "<%= Phoenix.Naming.humanize(Atom.to_string(attr)) %>") %>
 <% end %>
-
     <%%= lock_version_input f, assigns[:<%= schema.singular %>] %>
   </div>
 
   <footer class="card-footer">
-    <%%= submit_button assigns[:<%= schema.singular]%>] %>
+    <%%= submit_button assigns[:<%= schema.singular %>] %>
   </footer>
 <%% end %>
