--- a/priv/templates/ptr.gen.html/show.html.eex
+++ b/priv/templates/ptr.gen.html/show.html.eex
@@ -9,13 +9,11 @@
 
       <div class="card-content">
         <ul>
-<%= for {k, _} <- schema.attrs do %>
-          <li>
+<%= for {k, _} <- schema.attrs do %>          <li>
             <strong><%%= dgettext("<%= schema.plural %>", "<%= Phoenix.Naming.humanize(Atom.to_string(k)) %>") %>:</strong>
             <%%= @<%= schema.singular %>.<%= k %> %>
           </li>
-<% end %>
-        </ul>
+<% end %>        </ul>
       </div>
 
       <footer class="card-footer">
