--- a/assets/css/_bulma_tweaks.scss
+++ b/assets/css/_bulma_tweaks.scss
@@ -1,6 +1,10 @@
 .breadcrumb.is-primary {
   margin-top: 0.5em;
-  padding: 0.25rem 0em;
+  padding: 0.25em 0em;
+
+  @include touch() {
+    padding: 0.25em 0.75em;
+  }
 }
 
 .footer.is-primary {
