Menu.js is now more concise

--- a/lib/ptr_web/templates/layout/_menu.html.eex
+++ b/lib/ptr_web/templates/layout/_menu.html.eex
@@ -7,7 +7,7 @@
         </span>
       <% end %>
 
-      <div class="navbar-burger" data-target="main-menu">
+      <div class="navbar-burger" data-target="#main-menu">
         <span></span>
         <span></span>
         <span></span>
