Fix empty template generator =)

--- a/priv/templates/ptr.gen.html/empty.html.eex
+++ b/priv/templates/ptr.gen.html/empty.html.eex
@@ -2,15 +2,15 @@
   <div class="hero-body has-text-centered">
     <div class="container">
       <h1 class="title">
-        <%= dgettext("<%= schema.plural %>", "Looks like you have no <%= schema.plural %>.") %>
+        <%%= dgettext("<%= schema.plural %>", "Looks like you have no <%= schema.plural %>.") %>
       </h1>
 
       <h2 class="subtitle">
-        <%= dgettext("<%= schema.plural %>", "Let's create one...") %>
+        <%%= dgettext("<%= schema.plural %>", "Let's create one...") %>
       </h2>
 
       <p>
-        <%= link dgettext("<%= schema.plural %>", "New <%= schema.singular %>"), to: <%= schema.route_helper %>_path(@conn, :new), class: "button is-primary is-large" %>
+        <%%= link dgettext("<%= schema.plural %>", "New <%= schema.singular %>"), to: <%= schema.route_helper %>_path(@conn, :new), class: "button is-primary is-large" %>
       </p>
     </div>
   </div>
