--- a/lib/ptr_web/templates/user/index.html.eex
+++ b/lib/ptr_web/templates/user/index.html.eex
@@ -8,7 +8,7 @@
       </header>
 
       <div class="card-content">
-        <table class="table is-striped is-narrow is-fullwidth">
+        <table class="table is-striped is-hoverable is-narrow is-fullwidth">
           <thead>
             <tr>
               <th><%= dgettext "users", "Name" %></th>
