--- a/lib/ptr_web/templates/layout/app.html.eex
+++ b/lib/ptr_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><%= gettext "Ptr App" %></title>
+    <title><%= gettext "Vintock" %></title>
 
     <link rel="preload" href="<%= static_path(@conn, "/css/app.css") %>" as="style">
     <link rel="preload" href="<%= static_path(@conn, "/js/app.js") %>" as="script">
