--- a/lib/ptr_web/templates/session/new.html.eex
+++ b/lib/ptr_web/templates/session/new.html.eex
@@ -10,7 +10,7 @@
           <div class="message-body">
             <%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
               <%= input f, :email, dgettext("sessions", "Email"),
-                input_html: [autofocus: true, class: "input is-medium", placeholder: dgettext("sessions", "Email")],
+                input_html: email_input_html(),
                 icons:      [left: "envelope"],
                 label_html: [class: "label is-sr"] %>
 
