--- a/priv/templates/ptr.gen.html/index.html.eex
+++ b/priv/templates/ptr.gen.html/index.html.eex
@@ -2,15 +2,15 @@
   <div class="container">
     <div class="card">
       <header class="card-header">
-        <p class="card-header-title">
+        <h2 class="card-header-title">
           <%%= dgettext("<%= schema.plural %>", "<%= schema.human_plural %>") %>
-        </p>
+        </h2>
       </header>
       <div class="card-content">
-        <table class="table is-striped is-narrow is-fullwidth">
+        <table class="table is-striped is-hoverable is-narrow is-fullwidth">
           <thead>
             <tr>
-<%= for {k, _} <- schema.attrs do %>              <th><%%= dgettext "<%= schema.plural %>", "<%= Phoenix.Naming.humanize(Atom.to_string(k)) %>" %></th>
+<%= for {k, _} <- schema.attrs do %>              <th><%%= dgettext("<%= schema.plural %>", "<%= Phoenix.Naming.humanize(Atom.to_string(k)) %>") %></th>
 <% end %>
               <th></th>
             </tr>
