--- a/lib/ptr_web/templates/owner/index.html.eex
+++ b/lib/ptr_web/templates/owner/index.html.eex
@@ -2,17 +2,17 @@
   <div class="container">
     <div class="card">
       <header class="card-header">
-        <p class="card-header-title">
+        <h2 class="card-header-title">
           <%= dgettext("owners", "Owners") %>
-        </p>
+        </h2>
       </header>
 
       <div class="card-content">
         <table class="table is-striped is-hoverable is-narrow is-fullwidth">
           <thead>
             <tr>
-              <th><%= dgettext "owners", "Name" %></th>
-              <th><%= dgettext "owners", "Tax ID" %></th>
+              <th><%= dgettext("owners", "Name") %></th>
+              <th><%= dgettext("owners", "Tax ID") %></th>
 
               <th></th>
             </tr>
